# TankBotFight

./: CMakeLists.txt
.github/workflows/: ci.yaml  ubuntu_gcc.yaml
proto/: CMakeLists.txt  Register.proto
src/: Background.cpp  Background.hpp  Files.hpp  Ground.cpp  Ground.hpp  ObstacleClass.cpp  Server.cpp  Server.hpp  Tank.cpp  TankClass.cpp  TankClass.hpp  main.cpp
src/background/: BackgroundTextureName.cpp  BackgroundTextureName.hpp  RoadGenerator.hpp
